--- a/src/app/core/modules/forms/radio-element/radio-element.component.html
+++ b/src/app/core/modules/forms/radio-element/radio-element.component.html
@@ -1,3 +1,4 @@
+<mat-label class="me-5" >{{ element().label }}</mat-label>
 <mat-radio-group
   [formControl]="control()"
   [required]="element().required || false"
@@ -9,5 +10,12 @@
   }
   @if (element().hint) {
     <mat-hint>{{ element().hint }}</mat-hint>
+  }
+  @if (control().touched && control().errors) {
+    <mat-error>
+      <small>
+        <sc-error [element]="element()" [errors]="control().errors"></sc-error>
+      </small>
+    </mat-error>
   }
 </mat-radio-group>
