--- a/src/app/modules/admin/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/admin/components/edit-profile/edit-profile.component.html
@@ -15,10 +15,10 @@
     </div>
     <div class="col-sm-5 d-flex flex-column rounded-3xl align-items-center justify-content-center pb-4 pt-2 text-center">
       <input type="file" hidden #admin_logo (change)="uploadImage(admin_logo)" />
-      <div class="admin_profile_image" (click)="admin_logo.click()">
+      <div class="upload_image" (click)="admin_logo.click()">
         @if (imagePath) {
           @if (image) {
-            <mat-icon (click)="saveChanges($any(adminUser), $event)"> cloud_upload </mat-icon>
+            <mat-icon class="save" (click)="saveChanges($any(adminUser), $event)"> cloud_upload </mat-icon>
           }
           <img
             style="height: 8rem; width: 8rem; border-radius: 50%;"
