--- a/src/app/modules/admin/components/school-profile/school-profile.component.html
+++ b/src/app/modules/admin/components/school-profile/school-profile.component.html
@@ -1,7 +1,7 @@
 <section class="school_info_container d-flex justify-content-center flex-wrap">
   <div class="col-md-6 d-flex flex-column align-items-center justify-content-center pb-4 text-center">
     <input type="file" hidden #school_logo (change)="uploadImage(school_logo)" />
-    <div class="school_logo" (click)="school_logo.click()">
+    <div class="upload_image" (click)="school_logo.click()">
       <img
         style="height: 8rem; width: 8rem"
         [src]="schoolProfile?.logoUrl ? schoolProfile?.logoUrl : 'assets/images/avatar_1.webp'"
@@ -94,5 +94,5 @@
 
 <div class="col-md-12 justify-content-end d-flex py-4 text-center">
   <button mat-flat-button color="basic" class="mx-2">Cancel</button>
-  <button mat-flat-button color="primary" (click)="updateSchoolProfile()">Continue</button>
+  <button mat-flat-button color="primary" (click)="updateSchoolProfile()">save</button>
 </div>
