added teachers profile changes

--- a/src/app/modules/admin/components/school-profile/school-profile.component.html
+++ b/src/app/modules/admin/components/school-profile/school-profile.component.html
@@ -1,18 +1,16 @@
 <section class="school_info_container d-flex justify-content-center flex-wrap">
   <div class="col-md-6 d-flex flex-column align-items-center justify-content-center pb-4 text-center">
-    <input type="file" hidden #school_logo (change)="uploadImage(school_logo)" />
-    <div class="upload_image" (click)="school_logo.click()">
-      <img
-        style="height: 8rem; width: 8rem"
-        [src]="schoolProfile?.logoUrl ? schoolProfile?.logoUrl : 'assets/images/avatar_1.webp'"
-        [alt]="schoolProfile?.name"
-      />
-    </div>
+    <div
+      scImageHandler
+      [imagePath]="schoolProfile?.logoUrl || ''"
+      [alt]="schoolProfile?.name || ''"
+      (image)="image = $event"
+    ></div>
     <div [ngStyle]="{ width: '100%', maxWidth: '260px' }">
       <h5 class="school_name title">{{ schoolProfile?.name }}</h5>
       <span class="school_address sub_title">
-        {{ schoolProfile?.town }},
-        {{ schoolProfile?.city }}
+        {{ schoolProfile?.town | capitalize }},
+        {{ schoolProfile?.city | capitalize }}
         @if (schoolProfile?.state) {
           ({{ states[schoolProfile?.state || ''] }})
         }
