handled case of state populate

--- a/src/app/modules/admin/components/school-profile/school-profile.component.html
+++ b/src/app/modules/admin/components/school-profile/school-profile.component.html
@@ -12,7 +12,7 @@
         {{ schoolProfile?.town | capitalize }},
         {{ schoolProfile?.city | capitalize }}
         @if (schoolProfile?.state) {
-          ({{ states[schoolProfile?.state || ''] }})
+          ({{ states[schoolProfile?.state?.toUpperCase() || ''] }})
         }
       </span>
       <div class="school_academic">
