--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -26,7 +26,7 @@
           {{ schoolProfile?.town | capitalize}},
           {{ schoolProfile?.city | capitalize}}
           @if (schoolProfile?.state) {
-            ({{ states[schoolProfile?.state || ''] }})
+            ({{ states[schoolProfile?.state?.toUpperCase() || ''] }})
           }
         </span>
         <div>
