--- a/src/app/core/modules/forms/select-element/select-element.component.html
+++ b/src/app/core/modules/forms/select-element/select-element.component.html
@@ -1,4 +1,5 @@
 @let elem = element();
+@let cntrl = control();
 
 <mat-label>{{ elem.label }}</mat-label>
 <mat-form-field [style]="elem.width ? { width: elem.width } : { width: '100%' }">
@@ -10,7 +11,7 @@
       [required]="elem.required || false"
       [readonly]="elem.readonly || false"
       [hidden]="elem.hidden || false"
-      [formControl]="control()"
+      [formControl]="cntrl"
       [matAutocomplete]="auto"
     />
     <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
@@ -20,7 +21,7 @@
     </mat-autocomplete>
   } @else {
     <mat-select
-      [formControl]="control()"
+      [formControl]="cntrl"
       hideSingleSelectionIndicator
       [multiple]="elem.allowMultiple || false"
       [placeholder]="elem.placeholder || ''"
@@ -29,10 +30,10 @@
     >
       @if (elem.allowMultiple) {
         <mat-select-trigger>
-          {{ control().value?.[0] || '' }}
-          @if ((control().value?.length || 0) > 1) {
+          {{ cntrl.value?.[0] || '' }}
+          @if ((cntrl.value?.length || 0) > 1) {
             <span>
-              (+{{ (control().value?.length || 0) - 1 }} {{ control().value?.length === 2 ? 'other' : 'others' }})
+              (+{{ (cntrl.value?.length || 0) - 1 }} {{ cntrl.value?.length === 2 ? 'other' : 'others' }})
             </span>
           }
         </mat-select-trigger>
@@ -52,9 +53,9 @@
       }
     </mat-select>
   }
-  @if (control().errors) {
+  @if (cntrl.errors && cntrl.touched) {
     <mat-error>
-      <sc-error [element]="elem" [errors]="control().errors"></sc-error>
+      <sc-error [element]="elem" [errors]="cntrl.errors"></sc-error>
     </mat-error>
   }
   @if (elem.hint) {
