refactor radio element label and enhance text field styling

--- a/src/app/core/modules/forms/radio-element/radio-element.component.html
+++ b/src/app/core/modules/forms/radio-element/radio-element.component.html
@@ -1,4 +1,4 @@
-<mat-label class="me-5" >{{ element().label }}</mat-label>
+<mat-label>{{ element().label }}</mat-label>
 <mat-radio-group
   [formControl]="control()"
   [required]="element().required || false"
