--- a/src/app/modules/admin/modules/teachers/add/add.component.scss
+++ b/src/app/modules/admin/modules/teachers/add/add.component.scss
@@ -13,6 +13,21 @@
           padding: 7px;
         .form-container {
             box-shadow: initial;
+            padding:1.5rem 1rem  1rem 2rem !important;
+        }
+    }
+    .additional_education {
+        sc-form {
+            position: relative;
+            &::before {
+                content: '';
+                position: absolute;
+                height: 60%;
+                transform: translate(10px, -50%);
+                width: 0.3px;
+                background-color: #00000059;
+                top: 50%;
+            }
         }
     }
 }
