refactor form handling to use sc-form-array for education and experience sections; implement min elements validation

--- a/src/app/core/modules/forms/form-array/form-array.component.html
+++ b/src/app/core/modules/forms/form-array/form-array.component.html
@@ -1,19 +1,18 @@
-<ng-container>
-  @for (item of elements; track item) {
-    <div class="align-items-center d-inline-flex">
-      <!-- Add A Button For Remove -->
+@for (item of elements; track item) {
+  <div class="align-items-center d-inline-flex">
+    @if ( min() <= $index ) {
       <button mat-mini-fab style="background-color: #eb7623" (click)="delete($index)">
         <mat-icon>delete</mat-icon>
       </button>
-      <sc-form
-        [formConfig]="formConfig()"
-        [dynamicListOptions]="dynamicListOptions()"
-        [customDateClasses]="customDateClasses()"
-        [dateFilters]="dateFilters()"
-      ></sc-form>
-    </div>
-  }
-</ng-container>
+    }
+    <sc-form
+      [formConfig]="formConfig()"
+      [dynamicListOptions]="dynamicListOptions()"
+      [customDateClasses]="customDateClasses()"
+      [dateFilters]="dateFilters()"
+    ></sc-form>
+  </div>
+}
 
 <div class="pb-4">
   <button mat-raised-button (click)="add()">Add +</button>
