--- a/src/app/modules/admin/modules/teachers/add/add.component.html
+++ b/src/app/modules/admin/modules/teachers/add/add.component.html
@@ -17,42 +17,20 @@
   <mat-step>
     <ng-template matStepLabel>Educational & Experience </ng-template>
     <h4 class="mb-2">Educational</h4>
-    <sc-form [formConfig]="educationFormConfig" #educationForm [dynamicListOptions]="dynamicOptions"></sc-form>
-    @for (item of additionalEducations; track item) {
-      <div class="additional_education align-items-center d-inline-flex">
-        <!-- Add A Button For Remove -->
-        <button
-          mat-mini-fab
-          style="background-color: #eb7623"
-          (click)="deleteAdditionalEducations('education', $index)"
-        >
-          <mat-icon>delete</mat-icon>
-        </button>
-        <sc-form [formConfig]="educationFormConfig" #educationForm [dynamicListOptions]="dynamicOptions"></sc-form>
-      </div>
-    }
-    <div class="pb-4">
-      <button mat-raised-button (click)="addMore('education')">Add +</button>
-    </div>
+    <sc-form-array
+      [formConfig]="educationFormConfig"
+      #educationForm
+      [min]="1"
+      [dynamicListOptions]="dynamicOptions"
+    ></sc-form-array>
     <div class="seperator mb-3"></div>
     <!-- < ------------- Experience ----------- > -->
-    <h4 class="mb-2">Experience</h4>
-      @for (item of additionalExperiences; track item) {
-        <div class="additional_education align-items-center d-inline-flex">
-          <!-- Add A Button For Remove -->
-          <button
-            mat-mini-fab
-            style="background-color: #eb7623"
-            (click)="deleteAdditionalEducations('experience', $index)"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-          <sc-form [formConfig]="experienceFormConfig" #experience [dynamicListOptions]="dynamicOptions"></sc-form>
-        </div>
-      }
-    <div class="pb-4">
-      <button mat-raised-button (click)="addMore('experience')">Add +</button>
-    </div>
+    <h4 class="mb-3">Experience</h4>
+    <sc-form-array
+      [formConfig]="experienceFormConfig"
+      #experience
+      [dynamicListOptions]="dynamicOptions"
+    ></sc-form-array>
   </mat-step>
   <mat-step [stepControl]="personalInfoForm.formGroup">
     <ng-template matStepLabel>Documents / Additional Information</ng-template>
