refactor add component to improve form handling and validation; simplify personal info form access

--- a/src/app/modules/admin/modules/teachers/add/add.component.html
+++ b/src/app/modules/admin/modules/teachers/add/add.component.html
@@ -32,7 +32,7 @@
       [dynamicListOptions]="dynamicOptions"
     ></sc-form-array>
   </mat-step>
-  <mat-step [stepControl]="personalInfoForm.formGroup">
+  <mat-step [editable]="false">
     <ng-template matStepLabel>Documents / Additional Information</ng-template>
     <sc-form
       [formConfig]="personalInformationFormConfig"
