--- a/src/app/modules/admin/modules/teachers/add/add.component.html
+++ b/src/app/modules/admin/modules/teachers/add/add.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-4 pb-4" scImageHandler [alt]="'Add Teacher'" (image)="image = $event"></div>
 
   <div class="col-md-8 align-items-center d-flex flex-column">
-    <sc-form [formConfig]="addFormConfig" #form></sc-form>
+    <sc-form [formConfig]="addFormConfig" #credForm></sc-form>
   </div>
 </section>
 <mat-stepper [(selectedIndex)]="currentTabIndex" class="add_teacher_tab" linear #stepper>
@@ -24,7 +24,6 @@
       [dynamicListOptions]="dynamicOptions"
     ></sc-form-array>
     <div class="seperator mb-3"></div>
-    <!-- < ------------- Experience ----------- > -->
     <h4 class="mb-3">Experience</h4>
     <sc-form-array
       [formConfig]="experienceFormConfig"
@@ -34,11 +33,6 @@
   </mat-step>
   <mat-step [editable]="false">
     <ng-template matStepLabel>Documents / Additional Information</ng-template>
-    <sc-form
-      [formConfig]="personalInformationFormConfig"
-      #personalInfoForm
-      [dynamicListOptions]="dynamicOptions"
-    ></sc-form>
   </mat-step>
 </mat-stepper>
 
@@ -50,10 +44,8 @@
         Previous
       </button>
     }
-    @if (currentTabIndex == 2) {
-      <button mat-raised-button color="primary" class="shadow">save</button>
-    } @else {
-      <button mat-raised-button color="primary" class="shadow" (click)="handleStepIndex()">Next</button>
-    }
+    <button mat-raised-button color="primary" class="shadow" (click)="handleStepIndex()">
+      {{ currentTabIndex == 1 ? 'save' : 'Next' }}
+    </button>
   </div>
 </div>
