feat: refactor address field in teacher and school profiles, update routing and API paths, and enhance form handling

--- a/src/app/core/modules/forms/form-element/form-element.component.html
+++ b/src/app/core/modules/forms/form-element/form-element.component.html
@@ -14,7 +14,7 @@
       dynamicListOptions() && dynamicListOptions()[element.element.key]
         ? (dynamicListOptions()[element.element.key] | async)
         : element.element.options;
-    <sc-chip-element [keywords]="element.element.value || []" [options]="options ?? []" [element]="element.element" [control]="control()"></sc-chip-element>
+    <sc-chip-element [keywords]="control().value || element.element.value" [options]="options ?? []" [element]="element.element" [control]="control()"></sc-chip-element>
   }
   @case ('select') {
     @let options =
