fix: update MatTableDataSource initialization and paginator length handling

--- a/src/app/core/modules/table/table/table.component.html
+++ b/src/app/core/modules/table/table/table.component.html
@@ -51,6 +51,7 @@
   <mat-divider></mat-divider>
   @if (config().pagination && data().length) {
     <mat-paginator
+      [length]="data().length"
       [pageSize]="config().pagination?.pageSize || 10"
       [disabled]="config().pagination?.disabled"
       [showFirstLastButtons]="config().pagination?.showFirstLastButtons"
