--- a/src/app/modules/admin/modules/teachers/edit/edit.component.html
+++ b/src/app/modules/admin/modules/teachers/edit/edit.component.html
@@ -1,5 +1,5 @@
 <section class="main_header d-flex justify-content-center flex-wrap">
-    <div class="col-md-4 pb-4" scImageHandler [alt]="'Add Teacher'" (image)="image = $event"></div>
+    <div class="col-md-4 pb-4" scImageHandler [alt]="'Add Teacher'" [imagePath]="teacher['profileImageUrl']" (image)="image = $event"></div>
   
     <div class="col-md-8 align-items-center d-flex flex-column">
       <sc-form [formConfig]="addFormConfig" #credForm></sc-form>
