feat: implement dashboard component with data fetching and styling enhancements

--- a/src/app/core/components/login/login.component.scss
+++ b/src/app/core/components/login/login.component.scss
@@ -24,7 +24,7 @@
       padding-right: 3rem;
       div {
         height: 90%;
-        max-width: var(--width-Sz23);
+        max-width: 100%;
         background-size: cover;
         background-position: center;
         box-shadow: var(--boxShadow-xs);
