--- a/src/styles.scss
+++ b/src/styles.scss
@@ -194,7 +194,12 @@ mat-label {
     transform: translate(1px, -2px);
   }
 }
-
+.text-primary {
+  color: var(--primary-550) !important;
+}
+.bg-primary {
+  background-color: var(--primary-550) !important;
+}
 // <---------------- scrollbar style ------------------------------> //
 
 /* width */
