--- a/src/app/modules/admin/modules/students/add/add.component.html
+++ b/src/app/modules/admin/modules/students/add/add.component.html
@@ -2,7 +2,9 @@
     <div class="col-md-4 pb-4" scImageHandler [alt]="'Add Student'" (image)="image = $event"></div>
   
     <div class="col-md-8 align-items-center d-flex flex-column pb-4">
-      <sc-form [formConfig]="addFormConfig" #credForm></sc-form>
+      <sc-form [formConfig]="addFormConfig" #credForm
+      [dynamicListOptions]="dynamicOptions"
+      ></sc-form>
     </div>
   </section>
   <mat-stepper [(selectedIndex)]="currentTabIndex" class="add_teacher_tab" linear #stepper>
@@ -16,12 +18,15 @@
     </mat-step>
     <mat-step >
       <ng-template matStepLabel>Parents Or Guardian Information</ng-template>
-      <sc-form
+    <div class="seperator mb-3"></div>
+    <h5 class="mb-3">Click on Add button to add Parents </h5>
+      <sc-form-array
         [formConfig]="parentsOrGuardianFormConfig"
         #ParentOrGuardian
         [dynamicListOptions]="dynamicOptions"
-      ></sc-form>
+      ></sc-form-array>
     </mat-step>
+    
   </mat-stepper>
   
   <div class="col-md-12 justify-content-between d-flex py-4 text-center">
