--- a/src/app/modules/admin/modules/students/edit/edit.component.html
+++ b/src/app/modules/admin/modules/students/edit/edit.component.html
@@ -2,7 +2,9 @@
     <div class="col-md-4 pb-4" scImageHandler [alt]="'Add Student'" [imagePath]="student['profileImageUrl']" (image)="image = $event"></div>
   
     <div class="col-md-8 align-items-center d-flex flex-column">
-      <sc-form [formConfig]="addFormConfig" #credForm></sc-form>
+      <sc-form [formConfig]="addFormConfig" #credForm
+      [dynamicListOptions]="dynamicOptions"
+      ></sc-form>
     </div>
   </section>
   <mat-stepper [(selectedIndex)]="currentTabIndex" class="add_student_tab" linear #stepper>
