fix: correct spelling of 'preference' in layout component

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -87,7 +87,7 @@
                 <ng-container [ngTemplateOutlet]="profile_card"></ng-container>
               </div>
               <div class="seperator my-2"></div>
-              <sc-menu [navItems]="preferanceNavItems"></sc-menu>
+              <sc-menu [navItems]="preferenceNavItems"></sc-menu>
               <div class="seperator mb-2"></div>
               <sc-menu [navItems]="logoutNavItems"></sc-menu>
             </mat-menu>
