--- a/src/variables.scss
+++ b/src/variables.scss
@@ -307,6 +307,8 @@
   --mdc-filled-text-field-hover-active-indicator-color: transparent;
   --mdc-filled-text-field-focus-active-indicator-color: var(--primary-500);
   --mat-option-label-text-size: 0.8rem;
+  --mat-stepper-header-edit-state-icon-background-color:var(--primary-500);
+  --mat-stepper-header-selected-state-icon-background-color:var(--primary-500);
 }
 .mat-mdc-raised-button.mat-primary {
   --mdc-protected-button-container-color: var(--primary-500) !important;
