--- a/src/styles.scss
+++ b/src/styles.scss
@@ -157,3 +157,6 @@ mat-label {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--primary-400);
 }
+
+/* Importing @ngxpert/hot-toast SCSS file. */
+@use '@ngxpert/hot-toast/styles';
