--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -52,8 +52,8 @@
         <ng-container [ngTemplateOutlet]="profile_card"></ng-container>
         <div class="d-flex justify-content-end w-100 py-3 pe-3">
           @if (loggedInUser?.role == 'admin') {
-            <div class="user_profile_actions d-flex align-items-between" [routerLink]="'./preferance'">
-              <mat-icon>settings</mat-icon>Preferance
+            <div class="user_profile_actions d-flex align-items-between" [routerLink]="'./preference'">
+              <mat-icon>settings</mat-icon>preference
             </div>
           } @else {
             <div class="user_profile_actions d-flex align-items-between" [routerLink]="'./edit-profile'">
