feat: add blur event handling to chip input for improved user experience

--- a/src/app/core/modules/forms/chip-element/chip-element.component.html
+++ b/src/app/core/modules/forms/chip-element/chip-element.component.html
@@ -35,6 +35,7 @@
       [(ngModel)]="currentChip"
       [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
       (matChipInputTokenEnd)="add($event)"
+      (blur)="addFromBlur()"
     />
   }
 </mat-form-field>
