--- a/src/styles.scss
+++ b/src/styles.scss
@@ -219,6 +219,11 @@ mat-label {
 .bg-primary {
   background-color: var(--primary-550) !important;
 }
+.mdc-checkbox__native-control:enabled:checked~.mdc-checkbox__background{
+  border-color: var(--primary-550) !important;
+  border: 2px solid var(--primary-550);
+  background-color: var(--primary-550) !important;
+}
 // <---------------- scrollbar style ------------------------------> //
 
 /* width */
