--- a/src/app/core/components/layout/layout.component.scss
+++ b/src/app/core/components/layout/layout.component.scss
@@ -29,7 +29,7 @@
 
 main {
   padding: 0.1rem 1rem 0.5rem;
-  height: calc(100vh - (var(--mat-toolbar-standard-height)));
+  height: calc(100vh - (var(--mat-toolbar-standard-height) + 24px));
   background-color: #f8f9fa;
 }
 
